# College-Projects

./: API_Rest_Basic.ipynb  Atividade_CG_3.ipynb  ConvNet.ipynb  Crypto_Hash.ipynb  Crypto_Source.ipynb  Image_Cutter.ipynb  Password_Encryptor.ipynb  Password_analyzer.ipynb  README.md
.github/workflows/: VotingSystem.yml
Bot-Whatsapp/: README.md  index.js
ChessGame/: CMakeLists.txt  README.md
ChessGame/src/: main.cpp
ChessGame/src/chess/: AI.cpp  AI.h  ChessGame.cpp  ChessGame.h  Rules.ccp  Rules.h
ChessGame/src/chess/Utils.cpp/: Utils.h
ChessGame/src/gui/: ChessGUI.cpp  ChessGUI.h
DiscordApp/QuoteSaver/: discord.py
ECommerce/: EcommerceSystem.java
Elevator/: Elevator.py
Hanoi/: Hanoi.java
HotelBookingSystem/: .gitignore  README.md
HotelBookingSystem/assets/: bookings.json  rooms.json
HotelBookingSystem/src/main/: HotelBookingSystem.java  Main.java
HotelBookingSystem/src/models/: Booking.java  Room.java
HotelBookingSystem/src/utils/: FileManager.java  InputHelper.java
LibraryManagement/: .gitignore  DESIGN.md  run.bat  run.sh
LibraryManagement/data/: members.json
LibraryManagement/src/data/: books.json
LibraryManagement/src/main/: LibrarySystem.java
LibraryManagement/src/utils/: FileManager.java  InputHelper.java
LibraryManagement/tests/: BookTest.java  LibrarySystemTest.java  MemberTest.java
MathToolbox/: math_toolbox.py
POG/: main.py  questions.txt
QuizSystem/: .gitignore
QuizSystem/docs/: DESIGN.md  README.md
QuizSystem/resources/: config.properties  question.json
QuizSystem/src/main/: Main.java
QuizSystem/src/quiz/: Question.java  (+1 more)
QuizSystem/test/: QuestionTest.java  QuizSystemTest.java
QuoteSaverBot/: README.md  bot.py
QuoteSaverBot/commands/: add_quotes.py  delete_quote.py  init.py  list_quotes.py  random_quote.py
QuoteSaverBot/config/: settings.py
QuoteSaverBot/utils/: helpers.py  init.py  storage.py
UnitConverter/: .gitignore  README.md
UnitConverter/data/: config.properties
VotingSystem/: .gitignore  order.txt  views.py
VotingSystem/Base/: settings.py  wsgi.py
VotingSystem/Templates/: add_entry.html  base.html  competition_detail.html  competition_list.html
VotingSystem/static/: admin.py  apps.py  models.py  tests.py  urls.py
manga-translator-extension/: README.md  background.js  content.js  manifest.json  ocr-teste.html  ocr.js  style.css  translator.js
manga-translator-extension/popup/: popup.css  popup.html  popup.js
url-shortener/: .htaccess  index.php  redirect.php  style.css
(+11 files in other folders)
